k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-app-service
  namespace: default
  labels:
    app: login-app
  annotations:
    cloud.google.com/backend-config: '{"ports": {"3000":"login-app-backendconfig"}}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
    app: login-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
