k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: login-app-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: gce
    networking.gke.io/redirect-to-https: "true"
    kubernetes.io/ingress.global-static-ip-name: "login-app-static-ip"
    ingress.gcp.kubernetes.io/pre-shared-cert: "login-app-ssl-cert"
    networking.gke.io/v1beta1.FrontendConfig: "login-app-frontendconfig"
spec:
  ingressClassName: gce
  rules:
    - host: login.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: login-app-service
                port:
                  number: 80
